set room in bookings with findOneByCheckinCheckoutCategory

--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -39,7 +39,7 @@
                 <hr />
                 <p>
                     Category: <a class="custom-a cl-bold " href="{{ path('admin_category_view', {id: booking.category.id}) }}"> {{ booking.category.name }} </a> |
-                    Room: <a class="custom-a cl-bold " href="{{ path('admin_room_view', {id: booking.roomId.id}) }}"> {{ booking.roomId.number }} </a>
+                    Room: <a class="custom-a cl-bold " href="{{ path('admin_room_view', {id: booking.room.id}) }}"> {{ booking.room.number }} </a>
                 </p>
                 <hr />
                 <p>
