--- a/app/Resources/views/admin/stays/view.html.twig
+++ b/app/Resources/views/admin/stays/view.html.twig
@@ -26,7 +26,7 @@
                 <hr />
                 <p>
                     Booking Id: <a class="custom-a" href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"><span class="cl-bold"> {{ stay.booking.id }} </span></a> |
-                    Room: <a class="custom-a" href="{{ path('admin_room_view', {id: stay.booking.roomId.id}) }}"><span class="cl-bold"> {{ stay.booking.roomId.number }} </span></a>
+                    Room: <a class="custom-a" href="{{ path('admin_room_view', {id: stay.booking.room.id}) }}"><span class="cl-bold"> {{ stay.booking.room.number }} </span></a>
                 </p>
                 <hr />
                 <p>
