--- a/app/Resources/views/users/createBookingWithSearchForm.html.twig
+++ b/app/Resources/views/users/createBookingWithSearchForm.html.twig
@@ -5,18 +5,18 @@
     <div class="container body-content">
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
-                <form class="form-horizontal" action="{{ path('booking_create', {catId: room.categoryId, rId: room.id}) }}" method="post">
+                <form class="form-horizontal" action="{{ path('user_booking_create_with_search_form', { catId: room.categoryId, rId: room.id, checkin: checkin|date('Y-m-d'), checkout: checkout|date('Y-m-d') } ) }}" method="post">
                     <legend>Create Booking - {{ category.name }}</legend>
                     <div class="form-group">
                         <label class="col-sm-12 control-label" for="booking_checkin">Checkin</label>
                         <div class="col-sm-12">
-                            <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" value="{{ "now"|date('Y-m-d') }}" />
+                            <div class="form-control">{{ checkin|date("Y-m-d") }}</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-12 control-label" for="booking_checkout">Checkout</label>
                         <div class="col-sm-12">
-                            <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" value="{{ "now"|date_modify('+1 day')|date('Y-m-d') }}" />
+                            <div class="form-control">{{ checkout|date("Y-m-d") }}</div>
                         </div>
                     </div>
                     <div class="form-group">
