--- a/app/Resources/views/admin/guests/create.html.twig
+++ b/app/Resources/views/admin/guests/create.html.twig
@@ -3,60 +3,62 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            {% for msg in app.session.flashbag.get('errors')  %}
-                <div class="alert alert-danger">
-                    {{ msg }}
-                </div>
-            {% endfor %}
-            <form class="form-horizontal" action="{{ path('admin_guest_create') }}" method="post">
-                <fieldset>
-                    <legend>Create Guest</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_personalNumber">Personal Number</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_personalNumber" placeholder="Personal Number" name="guest[personalNumber]">
-                        </div>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                {% for msg in app.session.flashbag.get('errors')  %}
+                    <div class="alert alert-danger">
+                        {{ msg }}
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_firstName">First Name</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_firstName" placeholder="First Name" name="guest[firstName]">
+                {% endfor %}
+                <form class="form-horizontal" action="{{ path('admin_guest_create') }}" method="post">
+                    <fieldset>
+                        <legend>Create Guest</legend>
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_personalNumber">Personal Number</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_personalNumber" placeholder="Personal Number" name="guest[personalNumber]">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_fathersName">Father's Name</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_fathersName" placeholder="Father's Name" name="guest[fathersName]">
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_firstName">First Name</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_firstName" placeholder="First Name" name="guest[firstName]">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_lastName">Last Name</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_lastName" placeholder="Last Name" name="guest[lastName]">
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_fathersName">Father's Name</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_fathersName" placeholder="Father's Name" name="guest[fathersName]">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_email">Email</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_email" placeholder="Email" name="guest[email]">
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_lastName">Last Name</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_lastName" placeholder="Last Name" name="guest[lastName]">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="guest_phone">Phone</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="guest_phone" placeholder="Phone" name="guest[phone]">
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_email">Email</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_email" placeholder="Email" name="guest[email]">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
-                            <a class="a-cancel" href="{{ path('admin_guests') }}">Cancel</a>
-                            <button type="submit" class="btn btn-danger">Submit</button>
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="guest_phone">Phone</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="guest_phone" placeholder="Phone" name="guest[phone]">
+                            </div>
                         </div>
-                    </div>
-                    {{  form_row(form._token) }}
-                </fieldset>
-            </form>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <a class="a-cancel" href="{{ path('admin_guests') }}">Cancel</a>
+                                <button type="submit" class="btn btn-danger">Submit</button>
+                            </div>
+                        </div>
+                        {{  form_row(form._token) }}
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 
